# edgefs

./: .gitmodules  CMakeLists.txt  README.md  build.sh  center_server.cc  default_config.json  edgefs.cc  edgefs_main.cc  test.cc
include/edgefs/: bitmap.h  centerrpc.h  edgefs.h  edgerpc.h  mm.h  option.h
include/edgefs/rpc/: center_service.pb.cc  center_service.pb.h  edge_service.pb.cc  edge_service.pb.h  node_service.pb.cc  node_service.pb.h
protos/: center_service.proto  edge_service.proto  node_service.proto
src/: bitmap.cc  centerrpc.cc  edgefs.cc  edgerpc.cc  mm.cc
